# web-auditor

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2c4e171c43b3_accounts_users_and_site_tenancy.py  69b0821954c4_initial_schema.py  a1878f8458de_one_active_run_per_site.py  cf562560a605_add_run_email_requested_and_error_.py  f26e709cb21e_add_page_depth_and_status_code.py
app/: __init__.py  auth.py  cli.py  config.py  conversion.py  db.py  fingerprint.py  llm.py  magic.py  mailer.py  main.py  onboarding.py  plans.py  runner.py  scheduler.py  scoring.py  set_password.py  tenancy.py  weighting.py  worker.py  worker_control.py
app/acquisition/: __init__.py  crawler.py  domains.py  fetcher.py  pagespeed.py  render.py  screenshot.py
app/audits/: __init__.py  analytics.py  base.py  build_security.py  compliance.py  content_quality.py  content_strategy.py  geo.py  messaging.py  on_page_seo.py  performance.py  schema.py  technical_seo.py
app/connectors/: __init__.py  ga4.py  google_oauth.py  gsc.py  load.py  store.py
tests/: test_analytics.py  test_auth.py  test_build_security.py  test_compliance.py  test_connectors.py  test_content_strategy.py  test_domains.py  test_fingerprint.py  test_geo_answerability.py  test_magic.py  test_onboarding.py  test_parsers.py  test_passwords.py  test_plans.py  test_presentation.py  test_ranking.py  test_remediation_catalogue.py  test_scoring.py  test_sitemap.py  test_tenancy.py  test_view_comparison.py  test_weighting.py  test_worker.py  test_worker_control.py
(+42 files in other folders)
