[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "web-auditor"
version = "0.5.0"
description = "Website audit suite: nine sub-audits scored into a single site score, run outside-in or enriched with connected data."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.5",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "httpx>=0.27",
    "playwright>=1.48",
    "cryptography>=43.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# Depends(...) in FastAPI argument defaults is idiomatic, not the B008 footgun.
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
